src/css/Registration/login.css
.login .button-row__content {
  margin-top: 3rem;
}

.label--rememberme { font-weight: normal; }
.login-form a { display: block; font-size: 13px; }
.login-form a:first-child { margin-top: 2.5rem; }
.login-form a + a { margin-top: .5rem; }
.form-col__header h3 { font-size: 21px !important; }
.form-col__header h3 + p { font-size: 14px !important; }
.login-form__submit,
.register-form__submit { width: 100px !important; }

.form__container .btn:focus,
.form__container .btn:hover { outline: none; }

.button-spinner {
  display: none;
  background: transparent;
  height: 4.6rem;
  padding-right: 27px;
  border-radius: 0 4px 4px 0;
  margin-left: 5px;
  vertical-align: bottom;
}

.button-spinner img {
  height: 23px;
  margin-top: 11px;
}

.button-spinner:hover,
.button-spinner:focus,
.login-form__submit:hover + .button-spinner,
.login-form__submit:focus + .button-spinner { background-color: transparent; }

